# rust-flash-lso

./: Cargo.toml  LICENSE  README.md  regenerate-json.sh  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy-web.yml  fuzz.yml  rust.yml
amf/: Cargo.toml
amf/src/: amf0.rs  amf3.rs  lib.rs  types.rs
flash-lso/: Cargo.toml  README.md
flash-lso/benches/: benchmarks.rs
flash-lso/src/: amf0.rs  amf3.rs  element_cache.rs  errors.rs  flex.rs  length.rs  lib.rs  nom_utils.rs  read.rs  types.rs  write.rs
flash-lso/src/amf0/: mod.rs  read.rs  type_marker.rs  write.rs
flash-lso/src/amf0/writer/: amf0_writer.rs  array_writer.rs  cache_key.rs  mod.rs  obj_writer.rs  object_writer.rs  strict_array_writer.rs  typed_object_writer.rs
flash-lso/src/amf3/: custom_encoder.rs  element_cache.rs  length.rs  mod.rs  read.rs  type_marker.rs  write.rs
flash-lso/src/extra/: mod.rs
flash-lso/src/extra/flex/: mod.rs  read.rs  write.rs
flash-lso/src/packet/: mod.rs  read.rs  write.rs
flash-lso/src/types/: amf_version.rs  attribute.rs  class_definition.rs  element.rs  lso.rs  lso_header.rs  mod.rs  object_id.rs  reference.rs  value.rs
flash-lso/tests/: README.md  integration_tests.rs
flash-lso/tests/amf/: LearnToFly3.profileData.saveString.json  externalizable-object-back-reference.amf  object-with-vec-obj-child-referencing-parent.amf  object-with-vec-obj-child-referencing-parent.json  self-referential-array.amf  self-referential-array.json  self-referential-dict.amf  self-referential-dict.json  self-referential-object.amf  self-referential-object.json  self-referential-object.txt  self-referential-vec-object.amf  self-referential-vec-object.json
flash-lso/tests/sol/: AS2-Array-Demo.json  AS2-Boolean-Demo.json  AS2-Date-Demo.json  AS2-Demo.json  AS2-ECMAArray-Demo.json  AS2-ECMAArray-Demo.sol  AS2-Integer-Demo.json  AS2-LongString-Demo.json  AS2-Null-Demo.json  AS2-Number-Demo.json  AS2-Object-Demo.json  AS2-String-Demo.json  AS2-TypedObject-Demo.json  AS2-Undefined-Demo.json  AS2-XML-Demo.json  AS2-half-life-2-flash.json  AS2-half-life-2-flash.sol  AS3-Array-Demo.json  AS3-Boolean-Demo.json  AS3-ByteArray-Demo.json  AS3-Date-Demo.json  AS3-Demo.json  AS3-Dictionary-Demo.json  AS3-Integer-Demo.json  AS3-Null-Demo.json  AS3-Number-Demo.json  AS3-Object-Demo.json  AS3-String-Demo.json  AS3-TypedObject-Demo.json  AS3-Undefined-Demo.json  AS3-VectorInt-Demo.json  AS3-VectorNumber-Demo.json  AS3-VectorObject-Demo.json  AS3-VectorTypedObject-Demo.json  AS3-VectorUint-Demo.json  AS3-XML-Demo.json  AS3-XMLDoc-Demo.json  AkamaiEnterprisePlayer.userData.json  ClarenceSave_SLOT1.json  CoC_8.json  (+33 more)
flash-lso/tests/sol/other/: Johngame5.json  Johngame5.sol  fishtycoon.json  fishtycoon.sol  mainprofile.json  mainprofile.sol  self-referential.json  self-referential.sol
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_amf0_body.rs  fuzz_amf0_element_array.rs  fuzz_amf0_element_bool.rs  fuzz_amf0_element_long_string.rs  fuzz_amf0_element_number.rs  fuzz_amf0_element_string.rs  fuzz_amf0_header.rs  fuzz_amf0_length.rs  fuzz_amf0_signature.rs  fuzz_amf0_string.rs  fuzz_amf0_version.rs  fuzz_amf3_body.rs  fuzz_amf3_int_signed.rs  fuzz_amf3_int_unsigned.rs  fuzz_amf3_single_element.rs  fuzz_amf3_string.rs
lso-to-json/: Cargo.toml
lso-to-json/src/: main.rs
reader/: Cargo.toml
reader/src/: main.rs
web/: Cargo.toml
web/src/: blob_bindgen.rs  component_hexview.rs  component_modal.rs  component_model.rs  component_number_input.rs  component_string_input.rs  component_tab.rs  component_tabs.rs  component_treenode.rs  jquery_bindgen.rs  lib.rs  style.rs  uintarray_bindgen.rs  url_bindgen.rs  web_expect.rs
web/static/: index.html
