[package]
name = "amf"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
description = "Fast and safe SOL/AMF0/AMF3 format parsign"
repository = "https://github.com/CUB3D/rust-sol"
readme = "README.md"
license = "MIT"
keywords = ["sol", "amf0", "amf3", "parser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
log = "0.4.8"

