[package]
name = "lso-to-json"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"
repository = "https://github.com/CUB3D/rust-sol"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flash-lso = { path = "../flash-lso", features = ["serde", "flex"] }
env_logger = "=0.11.11"
clap = "=4.6.1"
serde_json = "=1.0.150"
