[package]
name = "web"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18.0"
yewtil = "0.4.0"
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
log = "0.4.11"
wasm-logger = "0.2.0"

flash-lso = { path = "../flash-lso", features = ["serde", "flex"] }
