[package]
name = "web"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "=0.23.0", features = ["csr"] }
web-sys = "=0.3.95"
wasm-bindgen = "=0.2.118"
js-sys = "=0.3.95"
log = "=0.4.29"
wasm-logger = "=0.2.0"
flash-lso = { path = "../flash-lso", features = ["serde", "flex"] }
gloo-file = "=0.4.0"
